add remote config